# Data-structures-on-C

./: CMakeLists.txt  README.md  common.h  main.c  my_clib.c  my_clib.h  test.c
data_structures/: BS_tree.h  set_long.h
include/: algorithms.h  common.h  data_structures.h
include/algorithms/: addition_chain.h  array_sorting.h  fast_substring_search.h  fibonacci.h  greatest_common_subsequence.h  levenstein_distance.h  long_arithmetics.h  long_fibonacci.h
include/data_structures/: BS_tree.h  KV_tree.h  array.h  decimal.h  dictionary.h  graph.h  linked_list.h  long_arithmetics.h  long_number.h  matrix.h  my_string.h  pair.h  queue.h  set_long.h
lib/: BS_tree.c  common.c  set_long.c
lib/algorithms/: addition_chain.c  array_sorting.c  fast_substring_search.c  fibonacci.c  greatest_common_subsequence.c  levenstein_distance.c  long_arithmetics.c  long_fibonacci.c
lib/data_structures/: BS_tree.c  KV_tree.c  array.c  decimal.c  dictionary.c  graph.c  linked_list.c  long_arithmetics.c  long_number.c  matrix.c  my_string.c  pair.c  queue.c  set_long.c
tests/: algorithms_tests.h  data_structures_tests.h  test_bs_tree.h  test_helpers.c  test_helpers.h  test_set_long.h
tests/algorithms/: test_array_sorting.c  test_array_sorting.h  test_levenstein_distance.c  test_levenstein_distance.h  test_subsequence_search.c  test_subsequence_search.h  test_substring_search.c  test_substring_search.h
tests/data_structures/: test_bs_tree.h  test_long_arithmetic.c  test_long_arithmetic.h  test_set_long.h
tree/: BS_tree.c  BS_tree.h
